--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
         "target": "es2020",
         "module": "es2020",
         "lib": ["es2020", "dom"],
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "strictPropertyInitialization": false
     },
     "angularCompilerOptions": {
         "enableI18nLegacyMessageIdFormat": false,
